--- a/style.css
+++ b/style.css
@@ -351,3 +351,219 @@ a{
 
     }
 }
+
+.project-section{
+    background-color:rgb(231,231,231) ;
+    margin-top:4rem;
+}
+
+.page-header{
+    color: var(--bgOrange);
+    font-size: 90px;
+    text-align: center;  /*  isse text centre me align ho jaega */
+    padding-top: 30px;
+}
+
+.project-container{
+    max-width: 1200px;
+    margin: 0 auto; /*  pure container ko centre me place krna chahte hain isiliye margin 0 auto di hai */
+    padding: 3rem 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+}
+
+.project-card{
+    width: 90%;   /*  isse project card ki height width set ho jaegi */
+    height: 550px;
+    background-image: url(./images/projects/Project1.png);
+    background-size: cover;
+   /*  background-repeat: no-repeat; */
+   position: relative; /*  because mujhe card pe text overlap krwana hai */
+   box-shadow: 0px 0px 40px #1f1f1f;
+  
+
+}
+
+.project-card::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;   /* top left bottom right 0 se pura project card ke upar overlap karega */
+    background-color: #1f1f1f9a;
+    z-index: 0;
+    
+    /* transform: scaleX(1); */
+}
+
+.project-card::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(45deg, #343d68, #343d68be, #343d687c);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: all 0.4s;
+    z-index: 1;
+}
+
+.project-card:hover::before{
+    transform: scaleX(1);
+}
+
+.project-number{
+    position: absolute;
+    font-size: 200px;
+    font-weight: 600;
+    color: white;
+    z-index: 10;
+    display: none;
+}
+
+.project-card:hover .project-number{
+    display: block;
+}
+
+.project-number-right{
+    right:-40px;
+    top: -45px;
+
+
+}
+
+.project-number-left{
+    left: -40px;
+    top: -45px;
+}
+
+.project-content{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 2em;
+    bottom: 20%;
+    z-index: 5;
+    gap: 1em;
+    transition: all 0.4s;
+}
+
+.project-content-left{
+    left: 10%;
+}
+
+.project-content-right{
+    right: 10%;
+}
+
+.project-skills-container{  /* ye icons ke liye */
+    width: 60%;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.project-skill{  /* ye icons ki dimensions set krne ke liye */
+
+    width: 40px;
+
+}
+
+.project-heading{
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 3rem;
+}
+
+.project-subheading{
+    width: 70%;
+    font-size: 16px;
+    font-style: italic;
+}
+
+.btn-group{
+    display: flex;
+    gap: 0.9rem;
+    align-items: center;
+
+}
+
+.btn-project:hover{
+    border: none;
+}
+
+.icon{
+    cursor: pointer;
+    color: white;
+    font-size: 35px;
+    z-index: 10;
+}
+
+.icon:hover{
+    color: var(--bgOrange);
+}
+
+.project-card:hover .project-content{  /*  card prm hover krne se bhi content size bada hoga or scale karega */
+    transform: scale(1.1);
+
+}
+
+#project1{
+    background-image: url(./images/projects/Project1.png);
+}
+
+#project2{
+    margin-left: 120px;
+    background-image: url(./images/projects/Project2.png);
+}
+
+
+#project3{
+    background-image: url(./images/projects/Project3.png);
+}
+
+
+#project4{
+    margin-left: 120px;
+    background-image: url(./images/projects/Project4.png);
+}
+
+.skills-container{
+    position: relative;
+    display: flex;
+    padding: 5rem;
+    margin: 10rem auto;
+    gap: 30px;
+}
+
+.skill-container-left{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.skill-container-right{
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    position: relative;
+    gap: 2rem;
+}
+
+.skill-fade-text{
+    position: absolute;
+    font-size: 15em;
+    font-style: bold;
+    color: rgb(231,231,231);
+    bottom: -34.5%;
+    right: -25%;
+    user-select: none;
+    overflow-y: hidden;
+}
+
