--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 .logo {
-  width: 80px; /* to decrese the width od "J" */
+  width: 70px; /* to decrese the width od "J" */
 }
 
 .logo-container {
@@ -45,7 +45,8 @@
 
 .logo-text {
   margin-left: -1.2rem; /* to bring the "ohn doe" near the logo "J" */
-  font-size: 28px; /* this is for tex attached with logo J "ohn doe" */
+  font-size: 30px; /* this is for tex attached with logo J "ohn doe" */
+  margin-top: 1.5rem;
 }
 
 .nav-items {
@@ -94,8 +95,8 @@ a {
   font-size: 7em;
   color: rgb(231, 231, 231);
 
-  bottom: -16%;
-  left: -5%;
+  bottom: -14.9%;  /* isse project section se thoda upper side pe ho jaega */
+  left: -8%;  /* aur left me jayega faded text */
   font-weight: bold;
   transition: all 3s;
 }
@@ -626,4 +627,96 @@ a {
   justify-content: center;
 }
 
-/* form me items ek ke niche ek laane ke liya */
+/* form me items ek ke niche ek laane ke liya form ko flex bana denge and felx direction column kar denge */
+
+.form{
+  display: flex;
+  flex-direction: column; /* isse form me items ek ke niche ek laaga hoga */
+  gap: 30px;
+  width: 70%;
+  margin: 2rem 5rem;
+
+}
+
+.fromfeild-container{
+  width: 100%;
+
+}
+
+.formfeild{
+  width: 100%;
+  height: 42px;
+  font-size: 18px;
+  padding: 0 2rem;
+  box-shadow: 2px 2px 10px #1f1f1f;
+  font-weight: 500;
+  border: none;
+  margin-top: 27px;  /* all form feilds ek hi line me aa jayengi including submit button */
+}
+
+.formfeild-textarea{
+  height: auto;
+  padding-top: 1rem;
+
+}
+
+.submit-btn{
+  border: none;
+  font-size: 1.4rem;
+  margin: 1rem 0;
+}
+
+#submit-btn:hover{
+  scale: 0.9;
+}
+
+.submit-icon{
+  padding: 0 1rem;
+  font-size: 1.5rem;
+}
+
+footer{
+  position: relative;
+  margin-top: -1px;
+  background-color: #343d68;
+  padding: 5rem;
+}
+
+.footer-wrapper{
+  display: flex;
+  gap: 1rem;
+  padding: 1.2rem;
+  justify-content: space-between;
+  align-items: center;  /* isse chize center ke andar aayengi */
+}
+
+.footer-faded-text{
+  position: absolute;  /*  as the postion of our footer is relative  */
+  left: 0;
+  bottom: 0;
+  color: #535c87;
+  user-select: none;  /*  isse text turns into faded and user cant selct the text */
+  font-size: 5em;
+}
+
+
+.link-wrapper{
+  display: flex;  /* footer me project skills and contactme links side by side aayengi */
+  gap: 1.2rem;
+
+}
+
+.link-wrapper div a{
+  color: white;
+  text-decoration: none;
+  transition: all 0.6s;
+}
+
+.link-wrapper div a:hover{
+  color: var(--bgOrange);
+}
+
+.icon-wrapper[
+  display: flex;
+  gap: 1rem;
+]
