--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
   align-items: center; /*  */
 
   padding-top: 1rem;
+  
 }
 
 .logo {
@@ -716,7 +717,22 @@ footer{
   color: var(--bgOrange);
 }
 
-.icon-wrapper[
+.icon-wrapper{
   display: flex;
   gap: 1rem;
-]
+}
+
+.skill-container-right {
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+
+
+
+
+
+
+
